--- a/FrontEnd_CardanoLRS/package.json
+++ b/FrontEnd_CardanoLRS/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@meshsdk/core": "^1.8.13",
     "lucide-react": "^0.469.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
