--- a/BackEnd_CardanoLRS/package.json
+++ b/BackEnd_CardanoLRS/package.json
@@ -17,13 +17,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "all": "^0.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.3",
     "mongoose-sequence": "^6.0.1",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
@@ -32,11 +32,15 @@
   "description": "",
   "devDependencies": {
     "@babel/core": "^7.26.0",
-    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-env": "^7.26.7",
     "@babel/register": "^7.25.9",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "mockingoose": "^2.16.2",
+    "mongodb-memory-server": "^10.1.3",
+    "mongoose": "^8.9.7",
     "supertest": "^7.0.0"
   }
 }
+ 
+ 
