--- a/BackEnd_CardanoLRS/package.json
+++ b/BackEnd_CardanoLRS/package.json
@@ -25,6 +25,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose-sequence": "^6.0.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.9",
     "uuid": "^11.0.5"
@@ -42,5 +43,3 @@
     "supertest": "^7.0.0"
   }
 }
- 
- 
