--- a/BackEnd_CardanoLRS/package.json
+++ b/BackEnd_CardanoLRS/package.json
@@ -17,13 +17,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@blockfrost/blockfrost-js": "^6.0.0",
     "all": "^0.0.0",
     "bcryptjs": "^2.4.3",
+    "cbor": "^10.0.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "lucid-cardano": "^0.10.11",
     "mongoose-sequence": "^6.0.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
@@ -35,6 +38,7 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.7",
     "@babel/register": "^7.25.9",
+    "@types/express": "^5.0.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "mockingoose": "^2.16.2",
