--- a/BackEnd_CardanoLRS/package.json
+++ b/BackEnd_CardanoLRS/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@blockfrost/blockfrost-js": "^6.0.0",
     "all": "^0.0.0",
+    "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "cbor": "^10.0.3",
     "cors": "^2.8.5",
